Add/Fix dropped item custom name visibility feature.